kubernetes/apps/actualbudget/actualbudget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  selector:
    app: actualbudget
  ports:
    - port: 5006
      targetPort: 5006
