kubernetes/apps/actualbudget/actualbudget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actualbudget
  namespace: actualbudget
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [budget.kostikidis.net]
      secretName: actualbudget-tls
  rules:
    - host: budget.kostikidis.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actualbudget
                port:
                  number: 5006
